# nihongomatrix

./: AUTHORS  Doxyfile  Makefile.in  configure  configure.in  nihongo_matrix.kdevelop  nihongo_matrix.kdevelop.pcs  nihongo_matrix.kdevses
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
debug/: Makefile  config.h  config.status  libtool
debug/src/: Database.sqlite  Database.sqlite_bkp  Makefile  database.lo  kanji.db  kanji.lo  misc.lo  nihongo_matrix  nihongo_matrix.loT
debug/src/.deps/: database.Plo  database.Po  kanji.Plo  kanji.Po  misc.Plo  misc.Po  nihongo_matrix.Po
debug/src/img/: .criadb.sh.swp  criadb.sh
src/: Makefile.am  Makefile.in  database.cpp  database.h  kanji.cpp  kanji.h  misc.cpp  misc.h  nihongo_matrix.cpp
templates/: h
